@@ -110,6 +110,10 @@
 	<td class="name" nowrap><a href="#VERSION_MINOR">VERSION_MINOR</a></td>
 	<td class="summary">The major number, i.e 0</td>
 	</tr>
+	<tr>
+	<td class="name" nowrap><a href="#VERSION_PATCH">VERSION_PATCH</a></td>
+	<td class="summary">The patch number, i.e 1</td>
+	</tr>
 </table>
 
 <br/>
@@ -150,6 +154,19 @@
     </dt>
     <dd>
     The major number, i.e 0
+
+
+
+
+
+
+</dd>
+    <dt>
+    <a name = "VERSION_PATCH"></a>
+    <strong>VERSION_PATCH</strong>
+    </dt>
+    <dd>
+    The patch number, i.e 1
 
 
 
